// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment component should render a loading state 1`] = `
<Media>
  Loading...
</Media>
`;

exports[`Comment component should render an error 1`] = `
<Media>
  Error
  : 
  message
</Media>
`;

exports[`Comment component should render the data 1`] = `
<Media>
  <Media
    left={true}
  >
    <Media
      alt="userName profile"
      className="rounded-circle"
      object={true}
      src="userPicture"
      width={50}
    />
  </Media>
  <Media
    body={true}
  >
    <Media
      heading={true}
    >
      userName
    </Media>
    <Media>
      Comment text.
    </Media>
    <Media
      bottom={true}
    >
      <RelativeDate
        value="createdAt"
      />
    </Media>
    <Apollo(Apollo(CreateReply))
      to="commentId"
    />
    <Apollo(Replies)
      to="commentId"
    />
  </Media>
</Media>
`;

exports[`Comment query should match expected shape 1`] = `
"query Comment($id: ID!) {
  Comment(id: $id) {
    createdAt
    createdBy {
      id
      name
      picture
    }
    id
    text
  }
}
"
`;
